--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "react-dom": "latest",
     "stripe": "^12.0.0",
     "axios": "^1.6.0"
-  }
+  },
+  "devDependencies": {
+  "typescript": "^5.2.2",
+  "@types/react": "^18.2.24",
+  "@types/node": "^20.5.9"
 }
